module-refactoring - move remaining nexus-grid deps into package

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,17 +15,25 @@
     "peerDependencies": {
         "ag-grid-react": "^23.0.3",
         "ag-grid-enterprise": "^23.0.2",
+        "@atlaskit/avatar": "^16.0.8",
         "@atlaskit/blanket": "^10.0.14",
         "@atlaskit/button": "^13.1.1",
         "@atlaskit/dropdown-menu": "^8.1.1",
+        "@atlaskit/datetime-picker": "^9.0.1",
+        "@atlaskit/flag": "^12.3.2",
         "@atlaskit/icon": "^19.0.1",
         "@atlaskit/modal-dialog": "^10.1.1",
+        "@atlaskit/inline-edit": "^10.0.23",
         "@atlaskit/page": "^11.0.5",
         "@atlaskit/select": "^10.0.0",
         "@atlaskit/spinner": "^12.1.6",
         "@atlaskit/theme": "^9.1.6",
+        "@atlaskit/textarea": "^2.2.9",
+        "@atlaskit/form": "8.1.4",
         "@atlaskit/tooltip": "^15.0.14",
         "@atlaskit/popup": "^1.0.0",
+        "@atlaskit/navigation": "^35.1.12",
+        "@atlaskit/navigation-next": "^9.0.1",
         "@vubiquity-nexus/portal-assets": "^1.x",
         "@vubiquity-nexus/portal-utils": "1.x",
         "@vubiquity-nexus/portal-styles": "^1.x",
@@ -37,10 +45,12 @@
         "react": "16.x",
         "react-redux": "^7.2.0",
         "reselect": "^4.0.0",
+        "react-intl": "^3.3.2",
         "react-forms-processor": "0.0.43",
         "react-forms-processor-atlaskit": "0.0.43",
         "react-router-dom": "^4.3.1",
-        "react-uid": "^2.2.0"
+        "react-uid": "^2.2.0",
+        "styled-components": "^3.2.6"
     },
     "devDependencies": {
         "@babel/cli": "^7.0.0",
