--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -11,7 +11,10 @@
         "lodash": "4.x",
         "moment": "2.x",
         "prop-types": "15.x",
-        "react": "16.x"
+        "react": "16.x",
+        "react-router-dom": "^4.3.1",
+        "@casl/ability": "^2.5.1",
+        "@casl/react": "^0.8.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.0.0",
