--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
         "@vubiquity-nexus/portal-assets": "^1.0.0",
         "@vubiquity-nexus/portal-auth": "^1.0.0",
         "@vubiquity-nexus/portal-styles": "^1.0.0",
-        "@vubiquity-nexus/portal-ui": "^1.0.4",
-        "@vubiquity-nexus/portal-utils": "^1.0.1",
+        "@vubiquity-nexus/portal-ui": "1.0.5",
+        "@vubiquity-nexus/portal-utils": "^1.0.2",
         "abortcontroller-polyfill": "^1.4.0",
         "ag-grid-community": "^23.0.2",
         "ag-grid-enterprise": "^23.0.2",
