--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,7 +39,13 @@
         "ag-grid-enterprise": "^23.0.2",
         "ag-grid-react": "^23.0.3",
         "classnames": "^2.2.6",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
+        "enzyme-to-json": "^3.4.4",
         "file-saver": "^2.0.2",
+        "jest": "^25.1.0",
+        "jest-environment-jsdom": "^25.1.0",
+        "jest-react-hooks-shallow": "^1.4.1",
         "lodash": "4.x",
         "moment": "2.x",
         "prop-types": "15.x",
@@ -52,6 +58,7 @@
         "react-router-dom": "^4.3.1",
         "react-uid": "^2.2.0",
         "reselect": "^4.0.0",
+        "redux-mock-store": "^1.5.4",
         "styled-components": "^3.2.6"
     },
     "devDependencies": {
