PORT-3244 adding fields to schema.json

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -110,5 +110,17 @@
     {
         "field": "locale",
         "configEndpoint": "/countries"
+    },
+    {
+        "field": "ratingSystem",
+        "configEndpoint": "/rating-systems"
+    },
+    {
+        "field": "rating",
+        "configEndpoint": "/ratings"
+    },
+    {
+        "field": "advisoriesCode",
+        "configEndpoint": "/advisories"
     }
 ]
