--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -148,7 +148,7 @@
             "javaVariableName": "territory",
             "displayName": "Selected",
             "dataType": "territory.selected",
-            "searchDataType": "territory.selected",
+            "searchDataType": "territoryType",
             "queryParamName": "selected",
             "readOnly": false,
             "enableSearch": true,
@@ -159,7 +159,7 @@
             "javaVariableName": "territory",
             "displayName": "Withdrawn",
             "dataType": "territory.withdrawn",
-            "searchDataType": "territory.withdrawn",
+            "searchDataType": "territoryType",
             "queryParamName": "withdrawn",
             "readOnly": true,
             "enableSearch": true,
