--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -88,7 +88,7 @@
             "javaVariableName": "keywords",
             "displayName": "Keywords",
             "dataType": "string",
-            "searchDataType": "string",
+            "searchDataType": "stringToArray",
             "queryParamName": "keywords",
             "readOnly": false,
             "enableSearch": true,
