PORT-3252 adding missing fields in schema.json

--- a/src/pages/avails/right-details/configEndpoints.json
+++ b/src/pages/avails/right-details/configEndpoints.json
@@ -122,5 +122,9 @@
     {
         "field": "advisoriesCode",
         "configEndpoint": "/advisories"
+    },
+    {
+        "field": "category",
+        "configEndpoint": "/categories"
     }
 ]
