PORT-3758: dispatch edit mode from redux

--- a/profile/config.json
+++ b/profile/config.json
@@ -29,7 +29,7 @@
         "url": "https://availsapi.dev.vubiquity.com"
     },
     "keycloak": {
-        "clientId": "temportalapp-dev",
+        "clientId": "portalapp-public",
         "realm": "Vubiquity",
         "url": "https://auth.dev.vubiquity.com/auth"
     },
