--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
         "eslint-config-nexus-react-app": "1.0.9",
         "eslint-config-prettier": "^6.11.0",
         "eslint-loader": "^2.1.1",
+        "eslint-nibble": "^5.1.0",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "7.18.3",
         "eslint-plugin-react-hooks": "^2.3.0",
