--- a/src/pages/servicing-orders/columnMappings.json
+++ b/src/pages/servicing-orders/columnMappings.json
@@ -55,11 +55,11 @@
     },
     {
         "colId": "title_manager",
-        "field": "titleManager",
+        "field": "title_manager",
         "dataType": "string",
         "headerName": "Title Manager",
         "width": 100,
-        "javaVariableName": "titleManager",
+        "javaVariableName": "title_manager",
         "enableSearch": true,
         "searchDataType": "string",
         "sortable": true
@@ -113,54 +113,54 @@
     {
         "colId": "premiering",
         "field": "premiering",
-        "dataType": "string",
+        "dataType": "boolean",
         "headerName": "Premiering",
         "width": 100,
         "javaVariableName": "premiering",
-        "searchDataType": "string",
+        "searchDataType": "boolean",
         "sortable": true,
         "hide": true
     },
     {
         "colId": "watermark",
         "field": "watermark",
-        "dataType": "string",
+        "dataType": "boolean",
         "headerName": "Watermark",
         "width": 100,
         "javaVariableName": "watermark",
-        "searchDataType": "string",
+        "searchDataType": "boolean",
         "sortable": true,
         "hide": true
     },
     {
         "colId": "late",
         "field": "late",
-        "dataType": "string",
+        "dataType": "boolean",
         "headerName": "late",
         "width": 100,
         "javaVariableName": "Late",
-        "searchDataType": "string",
+        "searchDataType": "boolean",
         "sortable": true,
         "hide": true
     },
     {
         "colId": "market_type",
-        "field": "marketType",
+        "field": "market_type",
         "dataType": "string",
         "headerName": "Market Type",
         "width": 100,
-        "javaVariableName": "marketType",
+        "javaVariableName": "market_type",
         "searchDataType": "string",
         "sortable": true,
         "hide": true
     },
     {
         "colId": "completed_date",
-        "field": "completedDate",
+        "field": "completed_date",
         "dataType": "regionalMidnight",
         "headerName": "Completed Date",
         "width": 100,
-        "javaVariableName": "completedDate",
+        "javaVariableName": "completed_date",
         "searchDataType": "regionalMidnight",
         "sortable": true,
         "hide": true
