PORT-3841: correct late field name

--- a/src/pages/servicing-orders/columnMappings.json
+++ b/src/pages/servicing-orders/columnMappings.json
@@ -138,7 +138,7 @@
         "dataType": "boolean",
         "headerName": "late",
         "width": 100,
-        "javaVariableName": "Late",
+        "javaVariableName": "late",
         "searchDataType": "boolean",
         "sortable": true,
         "hide": true
