--- a/profile/configQA.json
+++ b/profile/configQA.json
@@ -21,6 +21,7 @@
             "deteTitle": "/dete-asset-metadata-service/titles",
             "eventApi": "/api/event-api/v1",
             "eventApiV2": "/api/event-api/v2",
+            "lateFaults": "/late-faults",
             "servicingOrder": "",
             "DOPProjectManagementBase": "/dop/be-services/projectManagement",
             "DOPProjectManagementProject": "/dop/be-services/projectManagement/project",
