PORT-4026 renaming Director column to Crew

--- a/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
+++ b/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
@@ -91,7 +91,7 @@
         "colId": "castCrew.director",
         "javaVariableName": "castCrew.director",
         "field": "castCrew.director",
-        "headerName": "Director",
+        "headerName": "Crew",
         "dataType": "string",
         "searchDataType": "string",
         "queryParamName": "displayName",
