PORT-4022: remove links filters and sorting in titles table

--- a/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
+++ b/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
@@ -5,7 +5,6 @@
         "field": "system",
         "headerName": "System",
         "dataType": "string",
-        "searchDataType": "string",
         "queryParamName": "displayName",
         "readOnly": false,
         "enableSearch": false,
@@ -23,7 +22,8 @@
         "readOnly": false,
         "enableSearch": false,
         "enableEdit": true,
-        "required": true
+        "required": true,
+        "cellRenderer": "loadingCellRenderer"
     },
     {
         "colId": "title",
@@ -93,7 +93,6 @@
         "field": "castCrew.director",
         "headerName": "Crew",
         "dataType": "string",
-        "searchDataType": "string",
         "queryParamName": "displayName",
         "readOnly": false,
         "enableSearch": false,
@@ -106,7 +105,6 @@
         "field": "ratings",
         "headerName": "Rating",
         "dataType": "string",
-        "searchDataType": "string",
         "queryParamName": "ratings",
         "readOnly": false,
         "enableSearch": false,
@@ -119,7 +117,6 @@
         "field": "externalIds.eidrLevel1",
         "headerName": "EIDR 1",
         "dataType": "string",
-        "searchDataType": "string",
         "queryParamName": "displayName",
         "readOnly": false,
         "enableSearch": false,
@@ -132,7 +129,6 @@
         "field": "externalIds.eidrLevel2",
         "headerName": "EIDR 2",
         "dataType": "string",
-        "searchDataType": "string",
         "queryParamName": "displayName",
         "readOnly": false,
         "enableSearch": false,
@@ -145,7 +141,6 @@
         "field": "castCrew.cast",
         "headerName": "Cast",
         "dataType": "string",
-        "searchDataType": "string",
         "queryParamName": "displayName",
         "readOnly": false,
         "enableSearch": false,
