PORT-4040 changing searchDataType for releaseYear

--- a/profile/titleMatchingMappings.json
+++ b/profile/titleMatchingMappings.json
@@ -25,7 +25,7 @@
         "javaVariableName": "releaseYear",
         "displayName": "Release Year",
         "dataType": "year",
-        "searchDataType": "year",
+        "searchDataType": "string",
         "queryParamName": "releaseYear",
         "readOnly": false,
         "enableSearch": true,
