PORT-4036: remove multiple master selections

--- a/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
+++ b/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
@@ -23,7 +23,8 @@
         "readOnly": false,
         "enableSearch": false,
         "enableEdit": true,
-        "required": true
+        "required": true,
+        "cellRenderer": "loadingCellRenderer"
     },
     {
         "colId": "title",
