--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "classnames": "^2.2.6",
         "connected-react-router": "6.8.0",
         "eslint-plugin-import": "^2.22.0",
+        "fast-json-patch": "^3.0.0-1",
         "file-saver": "^2.0.2",
         "js-yaml": "^3.12.0",
         "jwt-decode": "^2.2.0",
