PORT-3819: Add width 40 for icons

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -20,7 +20,8 @@
             "enableEdit": false,
             "required": false,
             "icon": "warning",
-            "tooltip": "Removed from Catalog"
+            "tooltip": "Removed from Catalog",
+            "width": 20
         },
         {
             "javaVariableName": "rightStatus",
