PORT-3819: fix icon

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -12,10 +12,11 @@
         },
         {
             "javaVariableName": "updatedCatalogReceived",
+            "searchDataType": "icon",
             "displayName": " ",
             "dataType": "icon",
             "readOnly": true,
-            "enableSearch": false,
+            "enableSearch": true,
             "queryParamName": "updatedCatalogReceived",
             "enableEdit": false,
             "required": false,
@@ -25,10 +26,11 @@
         },
         {
             "javaVariableName": "rightStatus",
+            "searchDataType": "icon",
             "displayName": " ",
             "dataType": "icon",
             "readOnly": true,
-            "enableSearch": false,
+            "enableSearch": true,
             "queryParamName": "rightStatus===Withdrawn",
             "enableEdit": false,
             "required": false,
