PORT-4102: add styling fixes and make serviceType read-only

--- a/profile/servicesTableMappings.json
+++ b/profile/servicesTableMappings.json
@@ -4,9 +4,9 @@
         "displayName": "Service Type",
         "dataType": "select",
         "queryParamName": "serviceType",
-        "readOnly": false,
+        "readOnly": true,
         "enableSearch": true,
-        "enableEdit": true,
+        "enableEdit": false,
         "required": true
     },
     {
