PORT-3819: add search params

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -18,6 +18,7 @@
             "readOnly": true,
             "enableSearch": true,
             "queryParamName": "updatedCatalogReceived",
+            "queryParamValue": true,
             "enableEdit": false,
             "required": false,
             "icon": "warning",
@@ -31,7 +32,8 @@
             "dataType": "icon",
             "readOnly": true,
             "enableSearch": true,
-            "queryParamName": "rightStatus===Withdrawn",
+            "queryParamName": "rightStatus",
+            "queryParamValue": "Withdrawn",
             "enableEdit": false,
             "required": false,
             "icon": "block",
