PORT-3819: add yellow icon

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -32,8 +32,8 @@
             "dataType": "icon",
             "readOnly": true,
             "enableSearch": true,
-            "queryParamName": "rightStatus",
-            "queryParamValue": "Withdrawn",
+            "queryParamName": "rightStatusList",
+            "queryParamValue": ["Withdrawn"],
             "enableEdit": false,
             "required": false,
             "icon": "block",
