PORT-3918 datetime filter

--- a/src/pages/event-management/columnMappings.json
+++ b/src/pages/event-management/columnMappings.json
@@ -71,7 +71,8 @@
         "dataType": "timestamp",
         "searchDataType": "timestamp",
         "enableSearch": true,
-        "minWidth": 240
+        "minWidth": 240,
+        "sortable": true
     },
     {
         "colId": "postedTimeStamp",
