--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -17,7 +17,8 @@
             "dataType": "icon",
             "readOnly": true,
             "enableSearch": true,
-            "queryParamName": "updatedCatalogReceived",
+            "queryParamName": "icon",
+            "queryParamKey": "updatedCatalogReceived",
             "queryParamValue": true,
             "enableEdit": false,
             "required": false,
@@ -32,7 +33,8 @@
             "dataType": "icon",
             "readOnly": true,
             "enableSearch": true,
-            "queryParamName": "rightStatusList",
+            "queryParamName": "icon",
+            "queryParamKey": "rightStatusList",
             "queryParamValue": ["Withdrawn"],
             "enableEdit": false,
             "required": false,
@@ -1891,17 +1893,6 @@
             "queryParamName": "originallyReceivedAt",
             "readOnly": false,
             "readOnlyInDetails": true,
-            "enableSearch": true,
-            "enableEdit": true,
-            "required": false
-        },
-        {
-            "javaVariableName": "updatedCatalogReceived",
-            "displayName": "Removed from Catalogue",
-            "dataType": "boolean",
-            "searchDataType": "boolean",
-            "queryParamName": "updatedCatalogReceived",
-            "readOnly": true,
             "enableSearch": true,
             "enableEdit": true,
             "required": false
