PORT-4126: implement assign functionality for dop-tasks

--- a/profile/config.json
+++ b/profile/config.json
@@ -26,6 +26,8 @@
             "DOPProjectManagementProject": "/dop/be-services/projectManagement/project",
             "DOPLoginWithKeycloak": "/AmdocsOSS/Portal/services/LoginWithKeycloak",
             "DOPTasksPotentialOwners": "/dop/be-services/taskManagement/taskPotentialOwner",
+            "DOPTasksAssign": "/dop/be-services/taskManagement/task/assign",
+            "DOPTasksBatchJob": "/dop/be-services/taskManagement/taskBatchJob",
             "publisher": "/publisher/v1"
         },
         "servicingOrdersUrl": "https://servicing-order-manager.dev.vubiquity.com",
