--- a/profile/configQA.json
+++ b/profile/configQA.json
@@ -30,6 +30,8 @@
             "DOPProjectManagementProject": "/dop/be-services/projectManagement/project",
             "DOPLoginWithKeycloak": "/AmdocsOSS/Portal/services/LoginWithKeycloak",
             "DOPTasksPotentialOwners": "/dop/be-services/taskManagement/taskPotentialOwner",
+            "DOPTasksAssign": "/dop/be-services/taskManagement/task/assign",
+            "DOPTasksBatchJob": "/dop/be-services/taskManagement/taskBatchJob",
             "publisher": "/publisher/v1"
         }
     },
