PORT-4130: hide titleId

--- a/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
+++ b/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
@@ -23,7 +23,8 @@
         "enableSearch": false,
         "enableEdit": true,
         "required": true,
-        "cellRenderer": "loadingCellRenderer"
+        "cellRenderer": "loadingCellRenderer",
+        "hide": true
     },
     {
         "colId": "title",
