--- a/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
+++ b/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
@@ -51,7 +51,7 @@
         "enableSearch": true,
         "enableEdit": true,
         "required": true,
-        "cellRenderer": "loadingCellRenderer"
+        "cellRenderer": "concatenatedTitleCellRenderer"
     },
     {
         "colId": "releaseYear",
