PORT-4183: Remove filtering for concatenated Title

--- a/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
+++ b/src/pages/avails/rights-matching-titles-table/RightsMatchingTitlesTableMappings.json
@@ -42,14 +42,13 @@
     {
         "colId": "concatenatedTitle",
         "javaVariableName": "title",
-        "field": "title",
+        "field": "concatenatedTitle",
         "headerName": "Concatenated Title",
         "dataType": "string",
-        "searchDataType": "string",
-        "queryParamName": "title",
+        "queryParamName": "concatenatedTitle",
         "readOnly": false,
-        "enableSearch": true,
-        "enableEdit": true,
+        "enableSearch": false,
+        "enableEdit": false,
         "required": true,
         "cellRenderer": "concatenatedTitleCellRenderer"
     },
