PORT-4207: change TRP column dataType to yesOrNo

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -11,37 +11,6 @@
             "required": false
         },
         {
-            "javaVariableName": "updatedCatalogReceived",
-            "searchDataType": "icon",
-            "displayName": "Removed from Catalog",
-            "dataType": "icon",
-            "readOnly": true,
-            "enableSearch": true,
-            "queryParamName": "icon",
-            "queryParamKey": "updatedCatalogReceived",
-            "queryParamValue": true,
-            "enableEdit": false,
-            "required": false,
-            "icon": "warning",
-            "tooltip": "Removed from Catalog"
-        },
-        {
-            "javaVariableName": "rightStatus",
-            "searchDataType": "icon",
-            "displayName": "Withdrawn",
-            "dataType": "icon",
-            "readOnly": true,
-            "enableSearch": true,
-            "queryParamName": "icon",
-            "queryParamKey": "rightStatusList",
-            "queryParamValue": ["Withdrawn"],
-            "enableEdit": false,
-            "required": false,
-            "icon": "block",
-            "tooltip": "Withdrawn",
-            "valueToDisplay": "Withdrawn"
-        },
-        {
             "javaVariableName": "title",
             "displayName": "Title",
             "dataType": "string",
@@ -404,6 +373,17 @@
             "searchDataType": "multiselect",
             "options": ["Residential", "Hotel"],
             "queryParamName": "platformCategory",
+            "readOnly": false,
+            "enableSearch": true,
+            "enableEdit": true,
+            "required": false
+        },
+        {
+            "javaVariableName": "contractId",
+            "displayName": "Contract Id",
+            "dataType": "string",
+            "searchDataType": "string",
+            "queryParamName": "contractId",
             "readOnly": false,
             "enableSearch": true,
             "enableEdit": true,
@@ -1102,13 +1082,14 @@
         {
             "javaVariableName": "temporaryPriceReduction",
             "displayName": "Temporary Price Reduction",
-            "dataType": "boolean",
+            "dataType": "yesOrNo",
             "searchDataType": "boolean",
             "queryParamName": "temporaryPriceReduction",
             "readOnly": false,
             "enableSearch": true,
             "enableEdit": true,
-            "required": false
+            "required": false,
+            "defaultValue": "false"
         },
         {
             "javaVariableName": "srp",
@@ -1881,6 +1862,17 @@
             "queryParamName": "originallyReceivedAt",
             "readOnly": false,
             "readOnlyInDetails": true,
+            "enableSearch": true,
+            "enableEdit": true,
+            "required": false
+        },
+        {
+            "javaVariableName": "updatedCatalogReceived",
+            "displayName": "Removed from Catalogue",
+            "dataType": "boolean",
+            "searchDataType": "boolean",
+            "queryParamName": "updatedCatalogReceived",
+            "readOnly": true,
             "enableSearch": true,
             "enableEdit": true,
             "required": false
