PORT-4207: change TRP column dataType to yesOrNo

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -1082,7 +1082,7 @@
         {
             "javaVariableName": "temporaryPriceReduction",
             "displayName": "Temporary Price Reduction",
-            "dataType": "boolean",
+            "dataType": "yesOrNo",
             "searchDataType": "boolean",
             "queryParamName": "temporaryPriceReduction",
             "readOnly": false,
