PORT-4207: change TRP column dataType to yesOrNo

--- a/profile/availMapping.json
+++ b/profile/availMapping.json
@@ -11,6 +11,37 @@
             "required": false
         },
         {
+            "javaVariableName": "updatedCatalogReceived",
+            "searchDataType": "icon",
+            "displayName": "Removed from Catalog",
+            "dataType": "icon",
+            "readOnly": true,
+            "enableSearch": true,
+            "queryParamName": "icon",
+            "queryParamKey": "updatedCatalogReceived",
+            "queryParamValue": true,
+            "enableEdit": false,
+            "required": false,
+            "icon": "warning",
+            "tooltip": "Removed from Catalog"
+        },
+        {
+            "javaVariableName": "rightStatus",
+            "searchDataType": "icon",
+            "displayName": "Withdrawn",
+            "dataType": "icon",
+            "readOnly": true,
+            "enableSearch": true,
+            "queryParamName": "icon",
+            "queryParamKey": "rightStatusList",
+            "queryParamValue": ["Withdrawn"],
+            "enableEdit": false,
+            "required": false,
+            "icon": "block",
+            "tooltip": "Withdrawn",
+            "valueToDisplay": "Withdrawn"
+        },
+        {
             "javaVariableName": "title",
             "displayName": "Title",
             "dataType": "string",
@@ -373,17 +404,6 @@
             "searchDataType": "multiselect",
             "options": ["Residential", "Hotel"],
             "queryParamName": "platformCategory",
-            "readOnly": false,
-            "enableSearch": true,
-            "enableEdit": true,
-            "required": false
-        },
-        {
-            "javaVariableName": "contractId",
-            "displayName": "Contract Id",
-            "dataType": "string",
-            "searchDataType": "string",
-            "queryParamName": "contractId",
             "readOnly": false,
             "enableSearch": true,
             "enableEdit": true,
@@ -1861,17 +1881,6 @@
             "queryParamName": "originallyReceivedAt",
             "readOnly": false,
             "readOnlyInDetails": true,
-            "enableSearch": true,
-            "enableEdit": true,
-            "required": false
-        },
-        {
-            "javaVariableName": "updatedCatalogReceived",
-            "displayName": "Removed from Catalogue",
-            "dataType": "boolean",
-            "searchDataType": "boolean",
-            "queryParamName": "updatedCatalogReceived",
-            "readOnly": true,
             "enableSearch": true,
             "enableEdit": true,
             "required": false
